--- a/home/dsa.css
+++ b/home/dsa.css
@@ -538,3 +538,53 @@ input[type="file"] {
 .pg{
     font-size: 20px !important;
 }
+
+.dropbtn {
+    font-size: 17px;
+    padding: 0px;
+    width: 195px;
+    background-color: #191818;
+    color: white;
+    border: none;
+    display: flex;
+    justify-content: flex-start;
+}
+.dropbtn:hover{
+    cursor: pointer;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(85, 81, 81, 0);
+  z-index: 1;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+  
+.dropdown-content .selected-color {
+  color: black;
+  font-size: 15px;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  border: none;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.selected-color:hover {
+    background-color: #ddd;
+    cursor: pointer;
+}
+
+.show {display: block;}
