--- a/home/luk.css
+++ b/home/luk.css
@@ -667,11 +667,34 @@ input[type="file"] {
     margin-right: 5px;
     background-color: #88888800 !important;
 }  
-/* @media (max-width: 630px) {
+.back-button{
+    padding: 0px;
+    font-size: 29px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #dddddd00;
+    border: none;
+    color: #cccccc7d;
+}
+.back{
+    background-color: #dddddd00;
+    border: none;
+}
+@media (max-width: 630px) {
     .chat-container{
         display: none;
     }
     .main-list{
         width: 100%;
     }
-}  */
+  
+} 
+@media (min-width: 630px) {
+
+    .back-button{
+        display: none;
+    }
+} 
+
